refactor: Remove console mixed log, use default instance logs output path. Improve JVM parameters